# JobTracker-Bot

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  run.sh
app/: config.py  main.py
app/api/: areas.py  main.py
app/api/routers/: __init__.py  user.py  vacancies.py
app/api/schemas/: __init__.py  user.py
app/api/services/: user.py
app/bot/: bot.py  scheduler.py
app/bot/chat_templates/: vacancies.py
app/bot/handlers/: __init__.py  list.py  notifications.py  setup.py  start.py
app/db/: cache.py  crud.py  database.py  models.py
app/external_api/: areas.py  vacancies.py
app/services/: job_tracker.py
migrations/: env.py
migrations/versions/: 4077149a12f8_add_notifications_column_in_user.py  60ea0a52d0fe_changed_id_type_to_str.py  63e785e6752e_removed_filter_added_query_parameters.py  791ba5a78814_changed_id_type_to_str.py  7a8e07ffd91d_add_nullable_true_to_every_column_in_.py  7cf91161df2b_add_page.py  83bafed86221_initial.py  97fe7613c847_removed_filter_added_query_parameters.py  9b0f697ee9ca_add_notifications_column_in_user.py  b0bbd19e6135_fix.py  c088e1e1581e_add_notifications_column_in_user.py  c1ed761388c0_changed_id_type_to_str.py  d728b4517910_changed_columns_in_filter.py  e8139d8c0fae_add_relationships.py  f2e8b5497009_removed_id_from_users.py  f71db53ce6d7_modified_queryparameters_columns.py
