[project]
name = "jobtracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Hellhound Waffle",email = "gambitbrian7m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.121.1,<0.122.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
