[project]
name = "jobtracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Hellhound Waffle",email = "gambitbrian7m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.121.1,<0.122.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "apscheduler (>=3.11.1,<4.0.0)",
    "redis (>=7.0.1,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
